--- a/css/_mobile.scss
+++ b/css/_mobile.scss
@@ -18,14 +18,17 @@
 	}
 
 	.header {
-		height: 700px;
+		height: 648px;
 		margin-bottom: 0;
 		background-image: url("/img/svg/starmobile1.svg"), url("/img/svg/starmobile2.svg"), url("/img/svg/starmobile3.svg");
-		background-position: calc(100% + 90px) calc(0% - 80px), calc(10%) calc(10%), calc(90%) calc(85%);
+		background-position: calc(93% + 92px) calc(-1% - 80px),
+			13% 11%,
+			90% 95%;
 		background-repeat: no-repeat;
 
+
 		&__btn {
-			width: 15.437rem;
+			width: 17.437rem;
 		}
 
 		.center {
@@ -39,6 +42,8 @@
 
 			.box-title {
 				max-width: 497px;
+				padding-top: 22px;
+				margin-bottom: 27px;
 
 
 				.title {
@@ -48,6 +53,7 @@
 				}
 
 				.desc {
+					margin-top: 31px;
 					font-size: 1rem;
 					line-height: 20px;
 					text-align: center;
@@ -75,7 +81,7 @@
 				font-size: 1rem;
 			}
 
-			&>span {
+			&__stars {
 				width: 19px;
 			}
 		}
@@ -111,22 +117,52 @@
 						flex-direction: column-reverse;
 					}
 
+					&:nth-child(1) {
+						height: 527px;
+					}
+
+					&:nth-child(2) {
+						height: 569px;
+					}
+
+					&:nth-child(3) {
+						height: 566px;
+					}
+
+					&:nth-child(4) {
+						height: 530px;
+					}
+
+					&:nth-child(5) {
+						height: 606px;
+					}
+
+					&:nth-child(6) {
+						height: 627px;
+					}
+
+
 					.mini__card-content {
-						padding: 30px;
+						padding: 30px 30px 30px 30px;
+						row-gap: 1px;
 
 						.mini__card-title {
 							display: block;
 							font-size: 2rem;
+							line-height: 39px;
 						}
 
 						.mini__card-desc {
 							font-size: 1rem;
+							padding-top: 6px;
 						}
 					}
 				}
 			}
 		}
 	}
+
+
 
 
 	.footer {
