--- a/css/style.css
+++ b/css/style.css
@@ -148,24 +148,25 @@ body {
 .header .center {
   background-image: url("../img/svg/star-header.svg");
   background-position: center;
-  background-position: calc(50% + 260px) calc(50% - 130px);
+  background-position: calc(46% + 260px) calc(48% - 130px);
   background-repeat: no-repeat;
 }
 .header__container {
   max-width: 769px;
   padding-top: 179px;
-  padding-bottom: 156px;
+  padding-bottom: 155px;
   display: flex;
   flex-direction: column;
 }
 .header .box-title {
-  margin-bottom: 64px;
+  padding-top: 17px;
+  margin-bottom: 49px;
 }
 
 .nav {
   background-color: #BCEC30;
   padding-left: 20px;
-  max-width: 3220px;
+  max-width: 100%;
   height: 90px;
   display: flex;
   align-items: center;
@@ -231,7 +232,7 @@ body {
 }
 .main .about {
   background-image: url("../img/svg/star-about.svg");
-  background-position: calc(50% + 80px) calc(50% - 250px);
+  background-position: calc(49% + 80px) calc(53% - 250px);
   background-repeat: no-repeat;
 }
 .main .about__header {
@@ -246,12 +247,11 @@ body {
   align-items: start;
   -moz-column-gap: 32px;
        column-gap: 32px;
-  row-gap: 10px;
   margin-top: 72px;
-  margin-bottom: 50px;
+  margin-bottom: 42px;
 }
 .main .about__card {
-  width: 378px;
+  width: 377px;
   min-height: 473px;
   border-radius: 30px;
   background-color: #ffffff;
@@ -264,9 +264,6 @@ body {
 .main .about__card:nth-child(2), .main .about__card:nth-child(5) {
   min-height: 512px;
   align-self: flex-end;
-}
-.main .about__card:nth-child(4), .main .about__card:nth-child(6) {
-  min-height: 551px;
 }
 .main .about__card-box {
   display: flex;
@@ -291,12 +288,12 @@ body {
   text-align: center;
 }
 .main .mini {
-  padding-top: 46px;
+  padding-top: 49px;
   padding-bottom: 144px;
   border-top: 1px solid rgba(188, 236, 48, 0.2);
   background-image: url("../img/svg/star-top.svg"), url("../img/svg/star-bottom.svg");
   background-repeat: no-repeat;
-  background-position: 100% 3%, 99% 99%;
+  background-position: 97% 3%, 96% 99%;
 }
 .main .mini__cards {
   display: grid;
@@ -316,10 +313,11 @@ body {
   flex-direction: row-reverse;
 }
 .main .mini__card-content {
-  padding: 48px;
+  padding: 56px 0 0 48px;
   grid-column: 1/7;
   display: flex;
   flex-direction: column;
+  row-gap: 12px;
 }
 .main .mini__card-title {
   font-weight: 700;
@@ -328,7 +326,7 @@ body {
 }
 .main .mini__card-desc {
   font-size: 1.5rem;
-  padding: 24px 0 36px 0;
+  padding: 24px 109px 36px 0;
 }
 
 .footer {
@@ -387,14 +385,14 @@ body {
     background-color: #202027;
   }
   .header {
-    height: 700px;
+    height: 648px;
     margin-bottom: 0;
     background-image: url("/img/svg/starmobile1.svg"), url("/img/svg/starmobile2.svg"), url("/img/svg/starmobile3.svg");
-    background-position: calc(100% + 90px) calc(0% - 80px), 10% 10%, 90% 85%;
+    background-position: calc(93% + 92px) calc(-1% - 80px), 13% 11%, 90% 95%;
     background-repeat: no-repeat;
   }
   .header__btn {
-    width: 15.437rem;
+    width: 17.437rem;
   }
   .header .center {
     background-image: none;
@@ -406,6 +404,8 @@ body {
   }
   .header .header__container .box-title {
     max-width: 497px;
+    padding-top: 22px;
+    margin-bottom: 27px;
   }
   .header .header__container .box-title .title {
     font-size: 2.5rem;
@@ -413,6 +413,7 @@ body {
     text-align: center;
   }
   .header .header__container .box-title .desc {
+    margin-top: 31px;
     font-size: 1rem;
     line-height: 20px;
     text-align: center;
@@ -433,7 +434,7 @@ body {
   .nav__item > a {
     font-size: 1rem;
   }
-  .nav__item > span {
+  .nav__item__stars {
     width: 19px;
   }
   .main .about {
@@ -460,15 +461,36 @@ body {
   .main .mini .mini__cards .mini__card:nth-child(even) {
     flex-direction: column-reverse;
   }
+  .main .mini .mini__cards .mini__card:nth-child(1) {
+    height: 527px;
+  }
+  .main .mini .mini__cards .mini__card:nth-child(2) {
+    height: 569px;
+  }
+  .main .mini .mini__cards .mini__card:nth-child(3) {
+    height: 566px;
+  }
+  .main .mini .mini__cards .mini__card:nth-child(4) {
+    height: 530px;
+  }
+  .main .mini .mini__cards .mini__card:nth-child(5) {
+    height: 606px;
+  }
+  .main .mini .mini__cards .mini__card:nth-child(6) {
+    height: 627px;
+  }
   .main .mini .mini__cards .mini__card .mini__card-content {
-    padding: 30px;
+    padding: 30px 30px 30px 30px;
+    row-gap: 1px;
   }
   .main .mini .mini__cards .mini__card .mini__card-content .mini__card-title {
     display: block;
     font-size: 2rem;
+    line-height: 39px;
   }
   .main .mini .mini__cards .mini__card .mini__card-content .mini__card-desc {
     font-size: 1rem;
+    padding-top: 6px;
   }
   .footer {
     height: 100px;
