--- a/css/style.scss
+++ b/css/style.scss
@@ -64,20 +64,21 @@ body {
 	.center {
 		background-image: url("../img/svg/star-header.svg");
 		background-position: center;
-		background-position: calc(50% - -260px) calc(50% - 130px);
+		background-position: calc(46% - -260px) calc(48% - 130px);
 		background-repeat: no-repeat;
 	}
 
 	&__container {
 		max-width: 769px;
 		padding-top: 179px;
-		padding-bottom: 156px;
+		padding-bottom: 155px;
 		display: flex;
 		flex-direction: column;
 	}
 
 	.box-title {
-		margin-bottom: 64px;
+		padding-top: 17px;
+		margin-bottom: 49px;
 	}
 
 
@@ -85,9 +86,8 @@ body {
 
 .nav {
 	background-color: #BCEC30;
-	// временный падинг
 	padding-left: 20px;
-	max-width: 3220px;
+	max-width: 100%;
 	height: 90px;
 	display: flex;
 	align-items: center;
@@ -161,7 +161,7 @@ body {
 
 	.about {
 		background-image: url("../img/svg/star-about.svg");
-		background-position: calc(50% + 80px) calc(50% - 250px);
+		background-position: calc(49% + 80px) calc(53% - 250px);
 		background-repeat: no-repeat;
 
 		&__header {
@@ -176,13 +176,13 @@ body {
 			justify-items: center;
 			align-items: start;
 			column-gap: 32px;
-			row-gap: 10px;
+			// row-gap: 10px;
 			margin-top: 72px;
-			margin-bottom: 50px;
+			margin-bottom: 42px;
 		}
 
 		&__card {
-			width: 378px;
+			width: 377px;
 			min-height: 473px;
 			border-radius: 30px;
 			background-color: #ffffff;
@@ -199,10 +199,10 @@ body {
 				align-self: flex-end;
 			}
 
-			&:nth-child(4),
-			&:nth-child(6) {
-				min-height: 551px;
-			}
+			// &:nth-child(4),
+			// &:nth-child(6) {
+			// 	min-height: 551px;
+			// }
 
 			&-box {
 				display: flex;
@@ -232,19 +232,18 @@ body {
 	}
 
 	.mini {
-		padding-top: 46px;
+		padding-top: 49px;
 		padding-bottom: 144px;
 		border-top: 1px solid rgba(188, 236, 48, 0.2);
 		background-image: url("../img/svg/star-top.svg"), url("../img/svg/star-bottom.svg");
 		background-repeat: no-repeat;
-		background-position: calc(100%) calc(3%), calc(99%) calc(99%);
+		background-position: calc(97%) calc(3%), calc(96%) calc(99%);
 
 		&__cards {
 			display: grid;
 			grid-template-columns: 1fr;
 			row-gap: 32px;
 			padding-top: 72px;
-
 		}
 
 		&__card {
@@ -260,10 +259,11 @@ body {
 			}
 
 			&-content {
-				padding: 48px;
+				padding: 56px 0 0 48px;
 				grid-column: 1 / 7;
 				display: flex;
 				flex-direction: column;
+				row-gap: 12px;
 			}
 
 			&-title {
@@ -274,7 +274,7 @@ body {
 
 			&-desc {
 				font-size: 1.5rem;
-				padding: 24px 0 36px 0;
+				padding: 24px 109px 36px 0;
 			}
 		}
 	}
