--- a/css/_mobile.scss
+++ b/css/_mobile.scss
@@ -1,7 +1,7 @@
 @media (max-width: 768px) {
 
 	.center {
-		padding-left: 16px;
+		padding-left: 17px;
 		padding-right: 16px;
 	}
 
@@ -43,7 +43,7 @@
 			.box-title {
 				max-width: 497px;
 				padding-top: 22px;
-				margin-bottom: 27px;
+				margin-bottom: 46px;
 
 
 				.title {
@@ -57,6 +57,7 @@
 					font-size: 1rem;
 					line-height: 20px;
 					text-align: center;
+					max-width: 339px;
 				}
 			}
 		}
@@ -143,19 +144,24 @@
 
 
 					.mini__card-content {
-						padding: 30px 30px 30px 30px;
 						row-gap: 1px;
+						margin: 30px 30px 33px 30px;
+
 
 						.mini__card-title {
+							max-width: 299px;
 							display: block;
 							font-size: 2rem;
-							line-height: 39px;
+							line-height: 38px;
+							margin-bottom: 16px;
 						}
 
 						.mini__card-desc {
 							font-size: 1rem;
-							padding-top: 6px;
+							margin-bottom: 30px;
+							line-height: 21px;
 						}
+
 					}
 				}
 			}
