--- a/css/style.scss
+++ b/css/style.scss
@@ -36,6 +36,7 @@ body {
 }
 
 .title {
+	max-width: 769px;
 	font-weight: 700;
 	font-size: 4rem;
 	line-height: 78px;
@@ -161,7 +162,7 @@ body {
 
 	.about {
 		background-image: url("../img/svg/star-about.svg");
-		background-position: calc(49% + 80px) calc(53% - 250px);
+		background-position: -22% 13%;
 		background-repeat: no-repeat;
 
 		&__header {
@@ -182,12 +183,13 @@ body {
 		}
 
 		&__card {
-			width: 377px;
+			width: 378px;
 			min-height: 473px;
 			border-radius: 30px;
 			background-color: #ffffff;
 			overflow: hidden;
 			transition: 0.5s;
+			margin-bottom: -6px;
 
 			&:hover {
 				transform: scale(1.02);
@@ -199,6 +201,12 @@ body {
 				align-self: flex-end;
 			}
 
+			&:nth-child(4),
+			&:nth-child(6) {
+				min-height: 551px;
+				align-self: flex-end;
+			}
+
 			// &:nth-child(4),
 			// &:nth-child(6) {
 			// 	min-height: 551px;
@@ -206,15 +214,15 @@ body {
 
 			&-box {
 				display: flex;
-				margin: 32px;
+				margin: 32px 32px 36px 32px;
 				flex-direction: column;
-				gap: 16px;
+				gap: 15px;
 			}
 
 			&-title {
 				font-size: 2rem;
 				font-weight: 700;
-				line-height: 39px;
+				line-height: 38px;
 				width: 97%;
 				word-wrap: break-word;
 			}
@@ -232,12 +240,12 @@ body {
 	}
 
 	.mini {
-		padding-top: 49px;
+		padding-top: 59px;
 		padding-bottom: 144px;
 		border-top: 1px solid rgba(188, 236, 48, 0.2);
 		background-image: url("../img/svg/star-top.svg"), url("../img/svg/star-bottom.svg");
 		background-repeat: no-repeat;
-		background-position: calc(97%) calc(3%), calc(96%) calc(99%);
+		background-position: calc(96.5%) calc(3.1%), calc(96%) calc(98.6%);
 
 		&__cards {
 			display: grid;
@@ -247,34 +255,51 @@ body {
 		}
 
 		&__card {
-			width: 100%;
+			max-width: 1200px;
 			min-height: 500px;
 			background-color: #ffffff;
 			border-radius: 30px;
 			display: flex;
 			overflow: hidden;
+			justify-content: space-between;
+
 
 			&:nth-child(even) {
 				flex-direction: row-reverse;
 			}
 
+			&:nth-of-type(even) .mini__card-desc {
+				max-width: 504px;
+			}
+
+			&:nth-of-type(odd) .mini__card-desc {
+				max-width: 435px;
+			}
+
 			&-content {
-				padding: 56px 0 0 48px;
+				max-width: 600px;
+				margin: 48px;
 				grid-column: 1 / 7;
 				display: flex;
 				flex-direction: column;
-				row-gap: 12px;
 			}
 
 			&-title {
 				font-weight: 700;
 				font-size: 3rem;
 				max-width: 450px;
+				line-height: 59px;
+				margin-bottom: 24px;
 			}
 
 			&-desc {
 				font-size: 1.5rem;
-				padding: 24px 109px 36px 0;
+				line-height: 32px;
+				margin-bottom: 36px;
+
+				&:nth-child(odd) {
+					width: 338px;
+				}
 			}
 		}
 	}
